--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,13 @@
 }
 
 body {
-    height: auto;
-    width: auto;
+    height: 100vh;
+    width: 100%;
     margin: 0px;
     padding: 0px;
     font-family: 'Croissant One';
+    overflow-x: hidden;
+    color: white!important;
 }
 
 .cover {
@@ -22,10 +24,10 @@ body {
 	position: relative;
     margin: 0px;
 	padding: 0px;
-    background: url(/img/test-0.png) no-repeat, url(/img/9-min.jpg) repeat;
-    background-position: bottom, center;
-    background-position-y: -80%, 72%;
-    background-size: cover, cover;
+    background:url(/img/photos/7-min.jpg) repeat;
+    background-position:center;
+    background-position-y:72%;
+    background-size:cover;
 }
 
 
@@ -58,28 +60,31 @@ body {
 }
 
 .cover p{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: bold;
     margin-bottom: 10px;
+    color: white;
 }
 
 .cover h3 {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-bottom: 1rem;
     color: white;
 }
 
-.prolog {
-    min-height: 100vh;
-	position: relative;
-	padding: 0px;
-    background-color: pink;
+.cover .btn {
+    background-color: #5B0888;
+    color: wheat;
 }
 
-.home {
-    min-height: 100vh;
-	position: relative;
-	padding: 0px;
-    background-color: white;
-  
+.cover .btn:hover {
+    background-color: #5D12D2;
+}
+
+.prolog {
+    height: 100vh;
+    width: auto;
+    background: url(/img/bg-2-1.jpg);
+    background-position: center;
+    background-size: cover;
 }
