--- a/css/style.css
+++ b/css/style.css
@@ -86,5 +86,5 @@ body {
     width: auto;
     background: url(/img/background/bg-2-2.jpg);
     background-position: center;
-    background-size: cover;
+    background-size: contain;
 }
