--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,8 @@ body {
 
 .prolog {
     height: 100vh;
-    width: auto;
+    width: 100vh;
     background: url(/img/background/bg-2-2.jpg);
     background-position: center;
-    background-size: contain;
+    background-size: cover;
 }
