--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,131 @@
 
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,600);
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
 
 
 :root {
-    --animate-delay: 0s;
-    --purple: #634bbd
+    --gold: #f1c232;
+    --bg: #0a0a0a;
+    --shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+    --bg-button: #ffffff85;
+    --bg-button-hover: #f1c13293;
+
 
 }
 
 body {
-    height: 100vh;
-    margin: 0px;
     padding: 0px;
-    font-family: 'Croissant One';
-    overflow-x: hidden;
-    color: white!important;
+    margin: 0px;
+    width: 100%;
+	height: auto;
+	font-size: 14px;
+    background-color: white;
+    background: url(/img/background/bg-7-element1.png) no-repeat, url(/img/background/bg-7-element2.png) no-repeat;
+    background-size: 20%, 20%;
+    background-position: bottom right, top left;
+    background-attachment: fixed, fixed;
+    
+}
+
+
+/* Media Query */
+/* Laptop */
+@media (max-width: 992px) {
+    html {
+
+    }
+
+    .first h1{
+        font-size: 5.5rem;
+    }
+
+    .first a{
+        font-size: 1.1rem;
+    }
+
+    .simply-countdown>.simply-section {
+        padding: 45px;
+    }
+
+
+    .home h2{
+        font-size: 4rem;
+    }
+
+    .home h3{
+
+    }
+
+    .home p{
+        font-size: 17px;
+    }
+
+    .home .ht-3{
+        margin-bottom: 0px;
+    }
+
+    .home .margin-size{
+        margin-top: 20px;
+    }
+
+    .home .p-man{
+        padding-right: 40px;
+    }
+
+    .home .couple p{
+        font-size: 16px;
+    }
+
+    .home .couple img{
+        margin-top: 0px;
+        margin-bottom: 0px;
+        width: 190px;
+        height: 190px;
+    }
+
+    .gifts h2{
+        font-size: 7rem;
+    }
+
+    .gifts .img-1 {
+        display: block;
+        margin-top: 40%;
+    }
+
+    .gifts p{
+        font-size: 1.2rem;
+    }
+}
+
+/* Tablet */
+@media (min-width: 768px) {
+    html {
+    }
+
+    body {
+        background-size: 40%, 40%;
+    }
+}
+    
+    
+
+/* Handphone */
+@media (max-width: 600px) {
+    html {
+
+    }
+
+}
+
+/* Phone */
+@media (max-width: 576px) {
+    html {
+    }
+
+    body {
+        background-size: 50%, 50%;
+    }
+
+
 }
