--- a/css/style.css
+++ b/css/style.css
@@ -35,67 +35,11 @@ body {
     html {
 
     }
-
-    .first h1{
-        font-size: 5.5rem;
+    
+    body {
+        background-size: 30%, 30%;
     }
 
-    .first a{
-        font-size: 1.1rem;
-    }
-
-    .simply-countdown>.simply-section {
-        padding: 45px;
-    }
-
-
-    .home h2{
-        font-size: 4rem;
-    }
-
-    .home h3{
-
-    }
-
-    .home p{
-        font-size: 17px;
-    }
-
-    .home .ht-3{
-        margin-bottom: 0px;
-    }
-
-    .home .margin-size{
-        margin-top: 20px;
-    }
-
-    .home .p-man{
-        padding-right: 40px;
-    }
-
-    .home .couple p{
-        font-size: 16px;
-    }
-
-    .home .couple img{
-        margin-top: 0px;
-        margin-bottom: 0px;
-        width: 190px;
-        height: 190px;
-    }
-
-    .gifts h2{
-        font-size: 7rem;
-    }
-
-    .gifts .img-1 {
-        display: block;
-        margin-top: 40%;
-    }
-
-    .gifts p{
-        font-size: 1.2rem;
-    }
 }
 
 /* Tablet */
@@ -114,6 +58,10 @@ body {
 @media (max-width: 600px) {
     html {
 
+    }
+
+    body {
+        background-size: 50%, 50%;
     }
 
 }
