--- a/css/simplyCountdown.theme.default.css
+++ b/css/simplyCountdown.theme.default.css
@@ -3,19 +3,20 @@
     display:table;
     font-family:'Arial',sans-serif;
     margin: auto;
+    color: white;
 }
 
 .simply-countdown>.simply-section {
     width:50px;
     height:50px;
-    padding:60px;
+    padding:0px;
     display:flex;
     align-items:center;
     justify-content:center;
     float:left;
     margin:10px;
     background: var(--gold);
-    box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);
+    /* box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24); */
     border-radius: 50%;
 }
 .simply-countdown>.simply-section .simply-amount,
