--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,600);
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
-@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
 
 
 :root {
@@ -20,13 +19,37 @@ body {
     width: 100%;
 	height: auto;
 	font-size: 14px;
-    background-color: white;
-    background: url(/img/background/bg-7-element1.png) no-repeat, url(/img/background/bg-7-element2.png) no-repeat;
-    background-size: 20%, 20%;
-    background-position: bottom right, top left;
-    background-attachment: fixed, fixed;
+    overflow-x: hidden;
     
 }
+
+.cover {
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+	height: 100vh;
+    background: url(/img/background/bg-7-element1.png) no-repeat, url(/img/background/bg-7-element2.png) no-repeat;
+    background-size: 30%, 30%;
+    background-position: bottom right, top left;
+    background-attachment: fixed, fixed;
+}
+
+.cover img{
+    width: 40%;
+
+}
+
+.cover h1, p{
+    font-family: "dancing script";
+    font-size: 4rem;
+}
+
+.cover .cover-ttl {
+    font-size: 1.8rem;
+    padding: 0;
+    margin: 0;
+}
+
 
 
 /* Media Query */
@@ -36,18 +59,18 @@ body {
 
     }
     
-    body {
-        background-size: 30%, 30%;
+    .cover {
+        background-size: 25%, 25%;
     }
 
 }
 
 /* Tablet */
-@media (min-width: 768px) {
+@media (max-width: 768px) {
     html {
     }
 
-    body {
+    .cover {
         background-size: 40%, 40%;
     }
 }
@@ -60,7 +83,7 @@ body {
 
     }
 
-    body {
+    .cover {
         background-size: 50%, 50%;
     }
 
@@ -71,7 +94,7 @@ body {
     html {
     }
 
-    body {
+    .cover {
         background-size: 50%, 50%;
     }
 
