--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,10 @@ body {
     margin: 0px;
     width: 100%;
 	height: 100vh;
-    background: url(/img/background/bg-7-element1.png) no-repeat, url(/img/background/bg-7-element2.png) no-repeat;
-    background-size: 30%, 30%;
-    background-position: bottom right, top left;
-    background-attachment: fixed, fixed;
+    background: url(/img/background/bg-7-element1.png) no-repeat, url(/img/background/bg-7-element2.png) no-repeat, url(/img/background/bg-10.jpg) no-repeat;
+    background-size: 30%, 30%, cover;
+    background-position: bottom right, top left, center;
+    background-attachment: fixed, fixed, fixed;
 }
 
 .cover img{
@@ -50,6 +50,10 @@ body {
     margin: 0;
 }
 
+.content {
+
+}
+
 
 
 /* Media Query */
@@ -60,7 +64,7 @@ body {
     }
     
     .cover {
-        background-size: 25%, 25%;
+        background-size: 25%, 25%, cover;
     }
 
 }
@@ -71,7 +75,7 @@ body {
     }
 
     .cover {
-        background-size: 40%, 40%;
+        background-size: 40%, 40%, cover;
     }
 }
     
@@ -84,7 +88,7 @@ body {
     }
 
     .cover {
-        background-size: 50%, 50%;
+        background-size: 50%, 50%, cover;
     }
 
 }
@@ -95,7 +99,7 @@ body {
     }
 
     .cover {
-        background-size: 50%, 50%;
+        background-size: 50%, 50%, cover;
     }
 
 
