--- a/css/simplyCountdown.theme.default.css
+++ b/css/simplyCountdown.theme.default.css
@@ -3,7 +3,7 @@
     display:table;
     font-family:'Arial',sans-serif;
     margin: auto;
-    color: white;
+    color: black;
 }
 
 .simply-countdown>.simply-section {
