--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,6 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
 
 
-:root {
-    --gold: #f1c232;
-    --bg: #0a0a0a;
-    --shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-    --bg-button: #ffffff85;
-    --bg-button-hover: #f1c13293;
-
-
-}
-
 body {
     padding: 0px;
     margin: 0px;
@@ -39,10 +29,10 @@ body {
 
 }
 
-.cover h1, p{
+/* .cover h1, p{
     font-family: "dancing script";
     font-size: 4rem;
-}
+} */
 
 .cover .cover-ttl {
     font-size: 1.8rem;
@@ -50,11 +40,56 @@ body {
     margin: 0;
 }
 
-.content {
-
+.first {
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+	height: 100vh;
+    background: url(/img/background/bg-12.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 
+
+.first p{
+    padding: 0;
+    margin-bottom: 0;
+    margin-top: 0;
+    font-size: 1.8rem;
+}
+
+.first h1 {
+    font-size: 2rem;
+}
+
+.main {
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+	height: auto;
+    background: url(/img/background/bg-elemet-3.png) no-repeat, url(/img/background/bg-11.jpg) no-repeat;
+    background-position: right, center;
+    background-size: contain, cover;
+    background-attachment: fixed, fixed;
+}
+
+.couples .row {
+    margin-top: 30px!important;
+}
+
+.couples .card {
+    padding: 0px!important;
+    margin: 0px!important;
+}
+
+
+.couple img {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+}
 
 /* Media Query */
 /* Laptop */
