--- a/css/style.css
+++ b/css/style.css
@@ -257,9 +257,9 @@ color: rgba(185, 49, 252, 1)!important;
 
 
 
-.gifts-card {
+/* .gifts-card {
     height: 30rem!important;
-}
+} */
 
 .content-gift {
         
